# JavSP

./: .dockerignore  .envrc  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOGS.md  Dockerfile  JavSP.py  JavSP_copy.py  LICENSE  README.en-US.md  README.md  config.yml  make.bash  make.bat  make.sh  package_list.txt  pyproject.toml  requirements-linux.txt  requirements-noai.txt  requirements.txt  run.py  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  feature-request.md  feature-request.yml  wrong-movie-data.md
.github/workflows/: cx_freeze.yml  cx_freeze_windows.yml  docker-build.yml  docker-publish.yml  pyinstaller-windows.yml  pyinstaller.yml  test-basic-funcs-ubuntu.yml  test-basic-funcs-windows.yml  test-basic-funcs.yml  test-crawlers.yml  test-proxyfree.yml  test-web-funcs-windows.yml  test-web-funcs.yml
actors/: items.json
core/: avid.py  baidu_aip.py  chromium.py  config.ini  config.py  datatype.py  file.py  func.py  image.py  lib.py  nfo.py  opencv.py  print.py
core/ai_crop/: pphumanseg.LICENSE  pphumanseg.py  yunet.LICENSE  yunet.py
data/: README.md  actress_alias.json  genre_javbus.csv  genre_javbus_uncensored.csv  genre_javbus_youma.jsonc  genre_javdb.csv  genre_javdb_youma.jsonc  genre_javlib.csv
data/genres/: avsox.csv
docker/: Dockerfile  config.ini
javsp/: __main__.py  avid.py  chromium.py  cli.py  config.py  datatype.py  file.py  func.py  image.py  lib.py  nfo.py  print.py  prompt.py  translate.py
javsp/core/: avid.py  baidu_aip.py  chromium.py  config.ini  config.py  datatype.py  file.py  func.py  lib.py  nfo.py
javsp/crawlers/: all.py  interface.py  proxyfree.py
javsp/cropper/: __init__.py  interface.py  slimeface_crop.py  utils.py  yuface_crop.py
javsp/network/: client.py  utils.py
javsp/web/: airav.py  arzon.py  arzon_iv.py  avsox.py  avwiki.py  base.py  dl_getchu.py  exceptions.py  fantia_post.py  fantia_product.py  fanza.py  fc2.py  fc2fan.py  fc2ppvdb.py  gyutto.py  jav321.py  javbus.py  javdb.py  javlib.py  (+7 more)
make/: build.spec  gen_ver_hook.py  linux.spec  make.py  windows.spec
tests/: conftest.py  test_avid.py  test_crawlers.py  test_exe.py  test_file.py  test_func.py  test_lib.py  test_proxyfree.py  testdata_avid.txt
tools/: airav_search.py  call_crawler.py  check_genre.py  config_migration.py  version.py
unittest/: conftest.py  test_avid.py  test_crawlers.py  test_exe.py  test_file.py  test_func.py  test_javbus.py  test_lib.py  test_proxyfree.py  testdata_avid.txt
web/: __init__.py  airav.py  arzon.py  avsox.py  avwiki.py  base.py  dl_getchu.py  exceptions.py  fanza.py  fc2.py  fc2fan.py  fc2ppvdb.py  getchu.py  gyutto.py  jav321.py  javbus.py  javdb.py  javlib.py  javmenu.py  mgstage.py  msin.py  njav.py  prestige.py  proxyfree.py  translate.py
webui/: Dockerfile  Dockerfile.try  config.ini  docker test.yml  docker.yml  dockerfile.test  scraper_setting.py
(+140 files in other folders)
